add all solutions

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     </section>
     <div class="footer">
     </div>
+    <script type="text/javascript" src='/script.js'></script>
 </body>
 </html>
